# aoapc-bac2nd

./: .clangd  CMakeLists.txt  README.md  lcompile.sh  llaunch.sh  lrun.sh
ch03/: UVa10082.cpp  UVa272.cpp
ch06/: UVa210.cpp  UVa442.cpp  UVa514.cpp  UVa572.cpp
ch06/for_submit/: UVa210.cpp  UVa442.cpp  UVa514.cpp  UVa572.cpp
ch07/: UVa524.cpp
ch07/for_submit/: UVa524.cpp
ch09/: UVa1025.cpp
src/: main.cpp
